--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -35,6 +35,102 @@
    ]
   },
   {
+   "source": [
+    "# DATASET 1 "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataset 1 \n",
+    "\n",
+    "#%%\n",
+    "'''import libraries'''\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from service import *\n",
+    "\n",
+    "#%%\n",
+    "'''baca file'''  \n",
+    "data_bank=pd.read_csv(r\"/home/yusuf/hyperparameter-tuning-benchmark/Data_Preprocessing/dataset-raw/bank-full.csv\",sep=';')\n",
+    "data_bank.info()\n",
+    "\n",
+    "#%%\n",
+    "'''hapus kolom duration'''\n",
+    "data_bank=data_bank.drop(['duration'],axis=1)\n",
+    "# berdasarkan https://archive.ics.uci.edu/ml/datasets/Bank+Marketing, disarankan duration dihapus \n",
+    "\n",
+    "#%% \n",
+    "'''banyak nilai kategori di tiap fitur kategorikal''' \n",
+    "# banyak_tiap_kategori(data_bank)\n",
+    "\n",
+    "#%% \n",
+    "'''ubah nilai unknown menjadi nilai yang paling sering muncul'''\n",
+    "data_bank['job']=data_bank['job'].replace(['unknown'],'blue-collar')\n",
+    "data_bank['education']=data_bank['education'].replace(['unknown'],'secondary')\n",
+    "data_bank['contact']=data_bank['contact'].replace(['unknown'],'cellular')\n",
+    "\n",
+    "#%%\n",
+    "'''hapus kolom poutcome'''\n",
+    "data_bank=data_bank.drop(['poutcome'],axis=1)\n",
+    "\n",
+    "#%%\n",
+    "'''pengelompokan nilai kategori pada fitur job'''\n",
+    "data_bank['job']=data_bank['job'].replace(['management','entrepreneur'],'high')\n",
+    "data_bank['job']=data_bank['job'].replace(['blue-collar','technician','services','self-employed'],'mid')\n",
+    "data_bank['job']=data_bank['job'].replace(['unemployed','housemaid','student','admin.','retired'],'low')\n",
+    "\n",
+    "'''pengelompokan nilai kategori pada fitur month'''\n",
+    "data_bank['month']=data_bank['month'].replace(['jan','feb','mar','apr','may','jun'],'semester-1')\n",
+    "data_bank['month']=data_bank['month'].replace(['jul','aug','sep','oct','nov','dec'],'semester-2')\n",
+    "\n",
+    "#%%\n",
+    "## untuk catboost ini tidak perlu dilakukan...\n",
+    "'''label encoding pada fitur education'''\n",
+    "kategori=['primary','secondary','tertiary']\n",
+    "label=[1,2,3]\n",
+    "data_bank['education']=data_bank['education'].replace(kategori,label)\n",
+    "\n",
+    "#%%\n",
+    "'''dimensi data sebelum transformasi'''\n",
+    "X,y=pisah_x_y(data_bank)\n",
+    "# print(\"before transform\")\n",
+    "# print(\"y= \",y.shape)\n",
+    "# print(\"X= \",X.shape)\n",
+    "#%%\n",
+    "'''transformasi data'''\n",
+    "numerical_minmax=['age','balance','day','campaign','pdays','previous']\n",
+    "categorical_onehot=['job','marital','default','housing','loan','contact','month']\n",
+    "y=transform_kelas(y)\n",
+    "X=transform_fitur(X,numerical_minmax,categorical_onehot) # xgboost dan lightgbm\n",
+    "\n",
+    "\n",
+    "#%%\n",
+    "# print(\"dimensi data setelah transformasi\")\n",
+    "# print(\"y= \",y.shape)\n",
+    "# print(\"X= \",X.shape)\n",
+    "\n",
+    "#%%\n",
+    "'''export data'''\n",
+    "#ekspor_data(X,y,\"X-bank\",\"y-bank\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 194,
    "metadata": {},
@@ -45,7 +141,7 @@
   },
   {
    "source": [
-    "# EDA"
+    "## EDA"
    ],
    "cell_type": "markdown",
    "metadata": {}
